--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.3",
-    "@next/font": "^13.1.1",
+    "@next/font": "13.1.1",
+    "@taquito/utils": "15.0.1",
+    "axios": "1.2.2",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
