--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-force-graph": "^1.41.18",
+    "three": "^0.148.0",
+    "three-spritetext": "^1.6.5"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
-    "@types/react": "18.0.26"
+    "@types/react": "18.0.26",
+    "@types/three": "^0.148.0"
   }
 }
