--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.3",
+    "@mui/x-data-grid": "^5.17.21",
     "@next/font": "13.1.1",
     "@taquito/utils": "15.0.1",
     "axios": "1.2.2",
