--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/x-date-pickers": "^5.0.17",
     "@next/font": "13.1.1",
     "@taquito/utils": "15.0.1",
+    "@vercel/analytics": "^0.1.8",
     "axios": "1.2.2",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
